--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,459 @@
-.App {
+html {
+  scroll-behavior: smooth;
+}
+body{
+  background-color: rgb(255, 255, 255);
   text-align: center;
+  /* background-image: url('https://img.freepik.com/free-photo/sunshine-clouds-sky-during-morning-background-blue-white-pastel-heaven-soft-focus-lens-flare-sunlight-abstract-blurred-cyan-gradient-peaceful-nature-open-view-out-windows-beautiful-summer-spring_1253-1092.jpg');
+  background-repeat: repeat;
+  background-position: 0%;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
+  background-attachment: fixed; */
+}
+a{
+  color: white;
+  text-decoration: none;
+  transition: 0.5s;
+}
+a:hover{
+  color:rgb(22, 92, 255);
+  transition: 0.5s;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+::-webkit-scrollbar {
+  width: 5px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/* Track */
+::-webkit-scrollbar-track {
+  background: #d2d2d2; 
+}
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #7c7c7c; 
+  border-radius: 12px;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #555; 
+}
+.fade_background_div{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: white;
+  opacity: 0.5;
+}
+
+/***********header***************/
+.header_div{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50px;
+  background-color: white; 
+  border-bottom: 2px solid rgb(40, 40, 40);
+  filter: drop-shadow( 0 0 7px rgb(131, 131, 131));
+  color: rgb(0, 0, 0);
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.logo_text{
+  margin-left: 10px;
+font-size: 2rem;
+  cursor: default;
+}
+.text_logo{
+  color: black;
+  font-size: 1.3rem;
+  cursor: pointer;
+}
+.logo_div{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 200px;
+  height:35px ;
+
+  margin-left: 10px;
+
+  background-color: rgb(238, 236, 236);
+  border: 1px solid rgb(153, 153, 153);
+  border-radius: 20px;
+
+  filter: drop-shadow( 0 2px 2px rgb(82, 82, 82));
+}
+.menu_icon{
+  width: 42px;
+  height: 38px;
+  margin-right: 5px;
+  opacity: 1;
+  cursor: pointer;
+  color: rgb(0, 0, 0,0.8);
+}
+.menu_icon:hover{
+  filter: drop-shadow( 10px 2px 4px rgb(41, 41, 41));  
+  transition: 0.3s;
+}
+.menu_div{
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  top: 0;
+  left: 100%;
+  height: 100%;
+  width: 0;
+  color: rgb(0, 0, 0);
+  background-color: rgb(40, 40, 40);
+  overflow: hidden; 
+}
+.menu_div > h2:first-child{
+ margin-top: 100px;
+}
+.menu_div > h2{
+  font-family: sans-serif;
+  font-size: 20px;
+
+  width: 200px;
+  margin-top: 5px;
+  text-align: center;
+
+  cursor: pointer;
+  transition: 0.5s;
+}
+.menu_div > h2:hover{
+  /* color:rgb(0, 145, 255); */
+  filter: drop-shadow( 10px 5px 2px rgb(83, 83, 83));  
+  transition: 0.5s;
+}
+
+.exit_icon{
+  position: absolute;
+  top: 0;
+  right: 20px;
+  color: rgb(3, 3, 3);
+  font-size: 1.5rem;
+  cursor: pointer;
+  transition: 0.5s;
+}
+.exit_icon:hover{
+  color: white;
+  filter: drop-shadow( 1px 3px 7px rgb(83, 83, 83));  
+ transition: 0.2s;
+}
+
+/**********shoping cart  header********/
+.shoping_cart_close{
+  width: 33px;
+  height: 30px;
+  margin-left: 10px;
+  margin-top: 6px;
+  filter: drop-shadow( 0 0 1px rgb(0, 0, 0));
+  transition: 0.2s;
+}
+.shoping_cart_open{
+  width: 42px;
+  height: 38px;
+  opacity: 1;
+  cursor: pointer;
+  color: rgb(0, 0, 0,0.8);
+}
+
+.shoping_cart_close_div{
+  position: absolute;
+  right: 47px;
+  height: 40px;
+  width: 40px;
+  margin-right: 30px;
+  transition: 0.3s;
+}
+.shoping_cart_close_div:hover > .shoping_cart_close{
+  opacity: 0;
+  transition: 0.3s;
+} 
+.shoping_cart_close_div:hover > .shoping_cart_open{
+  opacity: 1;
+  filter: drop-shadow( 3px 3px 3px rgb(82, 82, 82));
+}
+
+.order_quantity_div{
+  position: fixed;
+  top: 30px;
+  right: 64px;
+  text-align: center;
+  font-size: 12px;
+  font-weight: bold;
+  width: 15px;
+  height: 15px;
+  color: rgba(3, 3, 3, 0.984);
+  background-color: white;
+  border-radius: 100px;
+  border: 1px solid rgb(0, 0, 0);
+  cursor:pointer ;
+}
+
+/**********shoping cart  header********/
+
+/***********home page***********/
+
+.button_1{
+  font-size: 15px;
+  width: 130px;
+  height: 50px;
+  margin-right: 20px;
+
+  color: rgb(254, 254, 254);
+  background-color:rgb(255, 51, 0) ;
+  border: 2px solid rgb(255, 51, 0);
+  border-radius: 5px;
+  box-shadow:  0 1px 4px rgba(0, 0, 0,0.7);
+
+  cursor: pointer;
+  transition: 0.3s;
+}
+.button_1:hover{
+  background-color: rgb(255, 255, 255);
+  color:rgb(255, 51, 0) ;
+  box-shadow:  0 0 0 rgb(0, 0, 0);
+  filter: drop-shadow( 5px 5px 7px rgb(89, 89, 89));
+  transition: 0.3s;
+}
+.button_2{
+  font-size: 15px;
+  width: 130px;
+  height: 50px;
+  
+  color: rgb(255, 255, 255);
+
+  background-color: rgb(0, 132, 255);
+  border: 2px solid rgb(0, 132, 255);
+  border-radius: 5px;
+  box-shadow:  0 1px 4px rgba(0, 0, 0,0.7);
+  
+  cursor: pointer;
+  transition: 0.3s;
+}
+.button_2:hover{
+  background-color: rgb(255, 255, 255);
+  color:rgb(0, 132, 255);
+  box-shadow:  0 0 0 rgb(0, 0, 0);
+  filter: drop-shadow( 2px 5px 7px rgb(89, 89, 89));
+  transition: 0.3s;
+}
+.common_header_text{
+  text-align: center;
+  margin-top: 130px;
+  color: rgb(0, 0, 0);
+  font-size:40px;
+}
+.popup_div{
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  padding: 20px;
+  width: 700px;
+  color: rgb(0, 0, 0);
+  background-color: rgb(255, 255, 255);
+  border: 2px solid gray;
+  border-radius: 12px;
+
+}
+/*********items*********/
+.techno__main_div{
+  display: flex;
+  /* flex-direction: row; */
+  flex-wrap: wrap;
+  justify-content: space-around;
+  /* gap: 10px; */
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
+}
+.each_item_div{
+  border: 2px solid rgb(255, 255, 255);
+  border-radius: 8px;
+  width: 30%;
+  margin-bottom: 20px;
+  margin-top: 10px;
+  transition: 0.5s;
+}
+.each_item_div:hover{
+  box-shadow: 10px 8px 7px rgba(100, 100, 100, 0.4);
+  transition: 0.5s;
+}
+.item_button{
+  font-weight: bold;
+  font-family: sans-serif;
+  font-size: 13px;
+  width: 60%;
+  height: 30px;
+  margin-bottom: 20px;
+  color: white;
+  background-color: rgb(17, 3, 148);
+  border: 2px solid rgb(17, 3, 148);
+  border-radius: 12px;
+  box-shadow: 0px 3px 7px rgba(0, 0, 0,0.4);
+  cursor: pointer;
+  transition: 0.3s;
+}
+.item_button:hover{
+  color: rgb(17, 3, 148);
+  background-color: white;
+  box-shadow: 7px 5px 10px rgba(0, 0, 0,0.4);
+  transition: 0.3s;
+}
+.item_detail{
+  margin-left: auto;
+  margin-right: auto;
+  width: 20%;
+  font-style: italic;
+  font-weight: bold;
+  font-size: 1rem;
+  color: rgb(0, 0, 0);
+  cursor: pointer;
+  transition: 0.6s;
+}
+.item_detail:hover{
+  text-decoration: underline;
+  transition: 0.6s;
+}
+.item_devider_hr{
+  border-style: none;
+  border: 1px solid rgb(182, 178, 178);
+  width: 700px;
+}
+/*******footer*****/
+.footer{
+  font-family: sans-serif;
+  margin-top: 150px;
+  margin-left: -8px;
+  margin-bottom: -10px;
+  width: 101%;
+  height: 300px;
+  color: white;
+  background-color: rgb(40, 40, 40);
+  border: 0px;
+}
+.footer_container{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  text-align: left;
+  white-space: pre-line;
+}
+.container_item{
+  font-family: sans-serif;
+  text-indent: 1px;
+  word-wrap: break-word; 
+  width: 300px;
+  margin-top: 30px;
+  margin-right: 30px;
+  margin-left: 30px;
+}
+.container_item > h3{
+  font-size: 1.8rem;
+}
+.container_item > p{
+  color: rgb(225, 225, 225);
+}
+.footer_copy{
+  text-align: center;
+  font-size: 14px;
+  
+  color: rgb(170, 170, 170);
+  margin-top: 40px;
+}
+
+/****************My orders*****************/
+.orders_main_div{
+  margin-top: 150px;
+}
+.orders_container{
+  font-family: sans-serif;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+.orders_each_item_div{
+  display: flex;
+  flex-direction: row;
+  border-radius: 12px;
+  
+}
+.orders_text_side_div{
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  width: 550px;
+  padding: 20px;
+}
+.button_remove{
+  font-size: 13px;
+  width: 90px;
+  height: 40px;
+  margin-right: 20px;
+  color: rgb(255, 255, 255);
+  background-color:rgb(17, 3, 148) ;
+  border: 2px solid rgb(17, 3, 148);
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+.button_remove:hover{
+  color: rgb(0, 0, 0);
+  background-color:rgb(255, 255, 255) ;
+  transition: 0.3s;
+}
+
+.button_buy{
+  font-size: 13px;
+  width: 90px;
+  height: 40px;
+  margin-right: 20px;
+
   color: white;
-}
+  background-color:green;
+  border: 2px solid green;
+  border-radius: 5px;
 
-.App-link {
-  color: #61dafb;
+  cursor: pointer;
+  transition: 0.3s;
 }
+.button_buy:hover{
+  color: green;
+  background-color:white ;
+  transition: 0.3s;
+}
+.quantity_change{
+  display: block;
+  width: 40px;
+  border-radius: 5px;
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+.total_pice_div{
+  width: 100%;
+  font-size: 30px;
+  border: 1px solid gray;
+  margin-top: 150px;
+  color: rgb(0, 0, 0);
+  background-color: rgb(255, 255, 255);
 }
