--- a/src/App.css
+++ b/src/App.css
@@ -120,16 +120,14 @@ font-size: 2rem;
   overflow: hidden; 
 }
 .menu_div > h2:first-child{
- margin-top: 100px;
+ margin-top: 150px;
 }
 .menu_div > h2{
   font-family: sans-serif;
-  font-size: 20px;
-
-  width: 200px;
-  margin-top: 5px;
+  font-size: 1.4rem;
+  width: 70%;
+  margin-top: 10px;
   text-align: center;
-
   cursor: pointer;
   transition: 0.5s;
 }
@@ -284,16 +282,11 @@ font-size: 2rem;
   width: 90%;
 }
 .each_item_div{
-  border: 2px solid rgb(255, 255, 255);
+  /* border: 2px solid rgb(0, 0, 0); */
   border-radius: 8px;
   width: 30%;
   margin-bottom: 20px;
   margin-top: 10px;
-  transition: 0.5s;
-}
-.each_item_div:hover{
-  box-shadow: 10px 8px 7px rgba(100, 100, 100, 0.4);
-  transition: 0.5s;
 }
 .item_button{
   font-weight: bold;
